 - Pull Request #929 - Update manufacturer_specific.xml from saintman23 (Nechry)
 - Pull Request #930 - Update manufacturer_specific.xml from saintman23 (Nechry)
 - Pull Request #934 - Manufacturer ID for AU NZ update from Dilepa (Nechry)
 - Issue #935 - Qubino zmnhvd1 / Zmnhvd* not supported from machielw (Nechry)
 - Pull Request #936 - Set G.R. 105n working from narfight (Nechry)
 

Dev Branch:
 - Rename zwcfg_*.xml to zwcache_*.xml to reflect its not a config file, but a cache. (Justin)
 - On *nix Platforms - Rename the threads to their functions, so its visible in ps/top etc (Justin)
 - Pull Request #732 - Fix CPPFLAGS being passed to secondary Makefiles from asac (Justin)
 - Pull Request #736 - Update dotNet wrapper with new Functions from bufferUnderrun (Justin)
 - Pull Request #746 - Fix HID exports on Windows from gizmocuz (Justin)
 - Issue #490 - Preliminary support for Barrier CC from Srirams (Justin)
 - Refactor the Alarm CC to properly expose the Alarm Types, Events and
   Params from Version 2 and above devices. See
   https://github.com/OpenZWave/open-zwave/wiki/Alarm-Command-Class for
   details - Addresses Issues #558, #481 #145 and #143 (Justin)

Version 1.4
 - Released 10th Jan, 2016

Version 1.3
 - Added support for Merten Plug-in Roller Shutter Module (Marco)
 - Fixed Issue 383 - Update Remotec ZXT-120 Config file thanks to yy.bendavid & gizmocuz (Alex)
 - Fixed Issue 392 - Add Qubino ZMNHJA2 Config file thanks to nicoserveur (Alex)
 - Fixed Issue 394 - Add 2GIG CT100 USA version device thanks to mldkfa (Alex)
 - Fixed Issue 387 - Add Zipato RFID Config file thanks to jeanfrancois.auger (Alex)
 - Fixed Issue 391 - Update zwave.key keyfob config thanks to gizmocuz (Alex)
 - Fixed Issue 397 - Update remotec ZXT-120 config thanks to gizmocuz (Alex)
 - Fixed Issue 396 - Add Z-Wave.me RaZberry thanks to steph10200 (Alex)
 - Fixed Issue 398 - Add Z-Wave.me USB Stick thanks to ugo.viti (Alex)